fix: hide invisible content consistently (#2254)
Some other parts of the interface for example URLs in profiles
use the invisible class, move this to the top level global file
so it'll be applied everywhere.

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -207,3 +207,13 @@ textarea {
 .inline-emoji {
   font-family: CountryFlagEmojiPolyfill, PinaforeEmoji, sans-serif;
 }
+
+.invisible {
+  /* copied from Mastodon */
+  font-size: 0;
+  line-height: 0;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  position: absolute;
+}
